Connected the app to Back4App

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.5 <4.0.0'
 
 dependencies:
+  parse_server_sdk_flutter: ^7.0.1
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
