--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.12
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
@@ -24,5 +25,10 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
+    - assets/cart.png
+    - assets/cslLabLogo.png
+    - assets/devices.png
     - assets/fiu_roary.png
+    - assets/logout.png
+    - assets/undo.png
   uses-material-design: true
