--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,12 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.12
+  get: ^4.3.8
   url_launcher: ^6.0.9
+  image_picker: ^1.0.7
+  mlkit_scanner: ^0.5.3
+  ocr_scan_text: ^1.3.1
+  google_mlkit_text_recognition: ^0.8.1
 
 dev_dependencies:
   flutter_test:
@@ -25,10 +30,5 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/cart.png
-    - assets/cslLabLogo.png
-    - assets/devices.png
-    - assets/fiu_roary.png
-    - assets/logout.png
-    - assets/undo.png
+    - assets/
   uses-material-design: true
