--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   mlkit_scanner: ^0.5.3
   ocr_scan_text: ^1.3.1
   google_mlkit_text_recognition: ^0.8.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
