1. Fixed the camera crash bug. 2. Added another restir

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
     <key>NSCameraUsageDescription</key>
     <string>FIU CSL Checkin needs access to the camera to scan QR codes for item check out.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>FIU CSL Checkin needs access to your library in order to upload images.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
